styles/style.css
/* VARIABLES */
:root {
	--text-color: #1a1a1a;
	--green-color: #00b172;
	--white-color: #fff;
}

/* RESET */
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	user-select: none;
}

/* COMMON PROPERTIES */
body {
	font-family: Verdana, sans-serif;
}
/* Colors */
#landing-text,
#landing-title {
	color: var(--white-color);
}
#elem-nav {
	color: var(--text-color);
}
#elem-nav > li:hover {
	color: var(--green-color);
}
/* Alignements */
header,
#elem-nav,
#landing-section {
	display: flex;
	align-items: center;
	justify-content: center;
}

/* HEADER */
header {
	width: 100%;
	height: 80px;
	position: sticky;
	top: 0;
	background-color: var(--white-color);
}
#nav-bar {
	width: 100%;
	display: flex;
	justify-content: space-between;
	margin: 0px 30px;
	transition: margin 0.2s;
}
#spotify-logo-nav {
	height: 40px;
}
#elem-nav {
	list-style-type: none;
	width: 40%;
	min-width: 300px;
	display: flex;
	justify-content: space-around;
}
#elem-nav > li {
	transition: color 0.3s;
	cursor: pointer;
}

/* MAIN */
/* Landing Section*/
main {
	width: 100%;
}
#landing-section {
	background-image: url("/images/landing.jpg");
	background-size: cover;
	background-repeat: no-repeat;
	height: 700px;
	display: flex;
	flex-direction: column;
}
#landing-title {
	font-size: 50px;
	text-align: center;
	transition: font-size 0.2s;
}
#landing-text {
	font-size: 19px;
	text-align: center;
	line-height: 30px;
	max-width: 550px;
	margin: 30px 20px 0px 20px;
	transition: font-size 0.2s;
}

/* Features Section */
.feature-box-icon {
	height: 50px;
}

/* Green Box Section */
#app-screen {
	width: 100px;
}

/* QUERIES */
@media (max-width: 550px) {
	#nav-bar {
		margin: 0px 15px;
	}
	#landing-title {
		font-size: 40px;
	}
	#landing-text {
		font-size: 17px;
	}
}

